# narrative-embedding-comparison

./: JaneEyre-scene-001.txt  JaneEyre-scene-002.txt  KB-Augmented-Segmentation.md  LICENSE  README.md  pyproject.toml  requirements-cuda.txt  sample_story.txt  segmentation_comparison.py  test_kb_segmentation.py
