[project]
name = "narrative-embedding-comparison"
version = "0.1.0"
description = "Compare prompt-flexible embedding models for narrative analysis"
requires-python = ">=3.11"
dependencies = [
    "plotly>=5.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "openai>=1.0.0",
    "nltk>=3.8.0",
    "python-dotenv>=1.0.0",
]
[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0", 
    "seaborn>=0.12.0",
]